speed calculation; init model briefly

--- a/data_process/osmnx_pipeline/fmm_dataset.ipynb
+++ b/data_process/osmnx_pipeline/fmm_dataset.ipynb
@@ -68,9 +68,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def distance(origin, destination):\n",
+    "    \"\"\"\n",
+    "    Calculate the Haversine distance.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    origin : tuple of float\n",
+    "        (lat, long)\n",
+    "    destination : tuple of float\n",
+    "        (lat, long)\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    distance_in_km : float\n",
+    "\n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> origin = (48.1372, 11.5756)  # Munich\n",
+    "    >>> destination = (52.5186, 13.4083)  # Berlin\n",
+    "    >>> round(distance(origin, destination), 1)\n",
+    "    504.2\n",
+    "    \"\"\"\n",
+    "    lat1, lon1 = origin\n",
+    "    lat2, lon2 = destination\n",
+    "    radius = 6371  # km\n",
+    "    \n",
+    "    if lat1 == -1 or lon1 == -1 or lat2 == -1 or lon2 == -1:\n",
+    "        return 0\n",
+    "\n",
+    "    dlat = math.radians(lat2 - lat1)\n",
+    "    dlon = math.radians(lon2 - lon1)\n",
+    "    a = (math.sin(dlat / 2) * math.sin(dlat / 2) +\n",
+    "         math.cos(math.radians(lat1)) * math.cos(math.radians(lat2)) *\n",
+    "         math.sin(dlon / 2) * math.sin(dlon / 2))\n",
+    "    c = 2 * math.atan2(math.sqrt(a), math.sqrt(1 - a))\n",
+    "    d = radius * c\n",
+    "\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.012581163581149576"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance((114.05215, 22.540995), (114.05204, 22.54106))#/(300/3600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "06-08_粤BD05049.pkl\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -100,6 +175,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>11166</th>\n",
+       "      <td>22.621640</td>\n",
+       "      <td>114.156740</td>\n",
+       "      <td>2020-06-07 23:56:21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9214635</th>\n",
+       "      <td>22.621632</td>\n",
+       "      <td>114.156746</td>\n",
+       "      <td>2020-06-08 02:11:27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4556480</th>\n",
        "      <td>22.621574</td>\n",
        "      <td>114.156810</td>\n",
@@ -119,20 +208,6 @@
        "      <td>114.155785</td>\n",
        "      <td>2020-06-08 13:32:56</td>\n",
        "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4604167</th>\n",
-       "      <td>22.622246</td>\n",
-       "      <td>114.155690</td>\n",
-       "      <td>2020-06-08 13:32:58</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4910696</th>\n",
-       "      <td>22.622255</td>\n",
-       "      <td>114.155480</td>\n",
-       "      <td>2020-06-08 13:33:03</td>\n",
-       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -178,16 +253,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>855 rows × 4 columns</p>\n",
+       "<p>985 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "               lat         lng            gps_time  speed\n",
+       "11166    22.621640  114.156740 2020-06-07 23:56:21      0\n",
+       "9214635  22.621632  114.156746 2020-06-08 02:11:27      0\n",
        "4556480  22.621574  114.156810 2020-06-08 13:32:15      7\n",
        "4579770  22.621704  114.156600 2020-06-08 13:32:36     15\n",
        "4601596  22.622225  114.155785 2020-06-08 13:32:56     16\n",
-       "4604167  22.622246  114.155690 2020-06-08 13:32:58     17\n",
-       "4910696  22.622255  114.155480 2020-06-08 13:33:03     12\n",
        "...            ...         ...                 ...    ...\n",
        "3410211  22.569810  114.117760 2020-06-08 23:55:54     63\n",
        "3429444  22.572780  114.117880 2020-06-08 23:56:13     58\n",
@@ -195,16 +270,17 @@
        "3467801  22.578468  114.115870 2020-06-08 23:56:53     62\n",
        "3616598  22.596954  114.111670 2020-06-08 23:59:23     42\n",
        "\n",
-       "[855 rows x 4 columns]"
+       "[985 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for taxi_file in os.listdir(TAXI_DATA_PATH):\n",
+    "    print(taxi_file)\n",
     "    df_taxi = pd.read_pickle(os.path.join(TAXI_DATA_PATH, taxi_file))\n",
     "    break\n",
     "\n",
@@ -220,7 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▎         | 22711/617790 [08:41<4:04:31, 40.56it/s] "
+      " 16%|█▌        | 102271/649565 [13:54<1:23:36, 109.11it/s]"
      ]
     }
    ],
@@ -233,32 +309,47 @@
     "\n",
     "traj_counter = 0\n",
     "for taxi_file in tqdm(sorted(os.listdir(TAXI_DATA_PATH))):\n",
-    "    date = int(taxi_file.split(\"_\")[0].split(\"-\")[1])\n",
-    "    if date < START_DAY or date > END_DAY:\n",
-    "        continue\n",
-    "    if os.path.getsize(os.path.join(TAXI_DATA_PATH, taxi_file)) < 100:\n",
-    "        continue\n",
-    "    # df_taxi = pd.read_csv(os.path.join(TAXI_DATA_PATH, taxi_file), parse_dates=[\"gps_time\"])\n",
+    "    # date = int(taxi_file.split(\"_\")[0].split(\"-\")[1])\n",
+    "    # if date < START_DAY or date > END_DAY:\n",
+    "    #     continue\n",
+    "    # if os.path.getsize(os.path.join(TAXI_DATA_PATH, taxi_file)) < 100:\n",
+    "    #     continue\n",
     "    df_taxi = pd.read_pickle(os.path.join(TAXI_DATA_PATH, taxi_file))\n",
-    "    if df_taxi.empty:\n",
+    "    trash=df_taxi.drop_duplicates(\"gps_time\", inplace=True) # 这一步其实该在数据清洗的时候做: 一辆车同一时间出现在不同位置\n",
+    "    if len(df_taxi) < 2:\n",
     "        continue\n",
+    "    \n",
+    "    # check first row's speed\n",
+    "    first_row = df_taxi.iloc[0]\n",
+    "    if first_row[\"speed\"] == 0:\n",
+    "        second_row = df_taxi.iloc[1]\n",
+    "        dist = distance((first_row[\"lat\"], first_row[\"lng\"]), (second_row[\"lat\"], second_row[\"lng\"]))\n",
+    "        time_delta = (second_row[\"gps_time\"] - first_row[\"gps_time\"]).total_seconds() / 3600 # hour\n",
+    "        df_taxi.loc[df_taxi.index[0], \"speed\"] = dist / time_delta # first_row is a copy, must operate on df\n",
     "\n",
     "    line_buffer = []\n",
-    "    last_time = df_taxi.iloc[0][\"gps_time\"] + pd.Timedelta(seconds=-TRAJ_SPLIT_INTERVAL)\n",
+    "    # (index, lat, lon, time, speed)\n",
+    "    last_row = (-1, -1, -1, df_taxi.iloc[0][\"gps_time\"] + pd.Timedelta(seconds=-TRAJ_SPLIT_INTERVAL), -1)\n",
+    "    # last_time = df_taxi.iloc[0][\"gps_time\"] + pd.Timedelta(seconds=-TRAJ_SPLIT_INTERVAL)\n",
     "    for row in df_taxi.itertuples():\n",
+    "        row = list(row)\n",
     "        if not contains(row[1], row[2]):\n",
     "            continue\n",
-    "        if row[3] - last_time < timedelta_downsampling:  # resample: drop <30s\n",
+    "        if row[3] - last_row[3] < timedelta_downsampling:  # resample: drop <30s\n",
     "            continue\n",
     "        if row[4] > 60: # drop speed > 60km/h\n",
     "            continue\n",
-    "        if row[3] - last_time > timedelta_traj_split:\n",
+    "        if row[4] == 0:\n",
+    "            dist = distance((row[1], row[2]), (last_row[1], last_row[2]))\n",
+    "            time_delta = (row[3] - last_row[3]).total_seconds() / 3600 # hour\n",
+    "            row[4] = dist / time_delta\n",
+    "        if row[3] - last_row[3] > timedelta_traj_split:\n",
     "            if len(line_buffer) > 1:  # only store length>1 traj\n",
     "                trash = gps_file.write(\"\".join(line_buffer))\n",
     "                traj_counter += 1\n",
     "            line_buffer = []\n",
     "\n",
-    "        last_time = row[3]\n",
+    "        last_row = row\n",
     "\n",
     "        line_buffer.append(f\"{traj_counter};{row[2]};{row[1]};{row[3]};{row[4]}\\n\")\n",
     "\n",
@@ -269,9 +360,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[info][ubodt_gen_app_config.cpp:42 ] Start reading ubodt configuration from arguments\n",
+      "[info][ubodt_gen_app_config.cpp:70 ] Finish with reading ubodt arg configuration\n",
+      "[info][ubodt_gen_app_config.cpp:74 ] ----    Print configuration   ----\n",
+      "[info][network_config.cpp:6  ] NetworkConfig\n",
+      "[info][network_config.cpp:7  ] File name: ../../data/sz_taxi_202006/fmm_sz_taxi_202006/edges.shp \n",
+      "[info][network_config.cpp:8  ] ID name: fid \n",
+      "[info][network_config.cpp:9  ] Source name: u \n",
+      "[info][network_config.cpp:10 ] Target name: v \n",
+      "[info][ubodt_gen_app_config.cpp:76 ] Delta 0.03\n",
+      "[info][ubodt_gen_app_config.cpp:77 ] Output file ../../data/sz_taxi_202006/fmm_sz_taxi_202006/ubodt.txt\n",
+      "[info][ubodt_gen_app_config.cpp:78 ] Log level 2-info\n",
+      "[info][ubodt_gen_app_config.cpp:79 ] Use omp true\n",
+      "[info][ubodt_gen_app_config.cpp:80 ] ---- Print configuration done ----\n",
+      "[info][ubodt_gen_app_config.cpp:97 ] Validating configuration for UBODT construction\n",
+      "[warning][ubodt_gen_app_config.cpp:102] Overwrite result file ../../data/sz_taxi_202006/fmm_sz_taxi_202006/ubodt.txt\n",
+      "[info][ubodt_gen_app_config.cpp:118] Validating done.\n",
+      "[info][network.cpp:72 ] Read network from file ../../data/sz_taxi_202006/fmm_sz_taxi_202006/edges.shp\n",
+      "[info][network.cpp:170] Number of edges 492 nodes 147\n",
+      "[info][network.cpp:172] Field index: id 0 source 1 target 2\n",
+      "[info][network.cpp:174] Read network done.\n",
+      "[info][network_graph.cpp:17 ] Construct graph from network edges start\n",
+      "[info][network_graph.cpp:30 ] Graph nodes 147 edges 492\n",
+      "[info][network_graph.cpp:31 ] Construct graph from network edges end\n",
+      "[info][ubodt_gen_app.cpp:20 ] Write UBODT to file ../../data/sz_taxi_202006/fmm_sz_taxi_202006/ubodt.txt\n",
+      "[info][ubodt_gen_algorithm.cpp:76 ] Start to generate UBODT with delta 0.03\n",
+      "[info][ubodt_gen_algorithm.cpp:77 ] Output format csv\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 24 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 24 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 29 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 29 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 42 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 56 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 70 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 84 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 98 / 147\n",
+      "[info][ubodt_gen_algorithm.cpp:105] Progress 112 / 147\n",
+      "[info][ubodt_gen_app.cpp:30 ] Time takes 0.068\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR 4: Unable to open EPSG support file gcs.csv.  Try setting the GDAL_DATA environment variable to point to the directory containing EPSG csv files.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# https://github.com/cyang-kth/fmm/issues/166\n",
     "# https://github.com/cyang-kth/fmm/blob/master/example/osmnx_example/README.md\n",
@@ -299,7 +451,7 @@
   "kernelspec": {
    "display_name": "Python [conda env:dz] *",
    "language": "python",
-   "name": "conda-env-dz-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
