--- a/data_process/gis_pipeline/fmm2atom_gis.ipynb
+++ b/data_process/gis_pipeline/fmm2atom_gis.ipynb
@@ -271,6 +271,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fid                                                         0\n",
+       "u                                                          39\n",
+       "v                                                         105\n",
+       "geometry    LINESTRING (114.044239247299 22.55066318370537...\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "fid                                                       246\n",
+       "u                                                         105\n",
+       "v                                                          39\n",
+       "geometry    LINESTRING (114.044239247299 22.54923912361608...\n",
+       "Name: 246, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_edges.iloc[0]\n",
+    "df_edges.iloc[246]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
