finish thesis-pre

--- a/BachelorThesis/ref.bib
+++ b/BachelorThesis/ref.bib
@@ -1,7 +1,10 @@
-@inproceedings{TrafficFlowPredictionwithVehicleTrajectories,
-  title={Traffic Flow Prediction with Vehicle Trajectories.},
-  author={Mingqian Li and Panrong Tong and Mo Li and Zhongming Jin and Jianqiang Huang and Xian-Sheng Hua},
-  booktitle={National Conference on Artificial Intelligence},
+@inproceedings{AAAI21,
+  title={Traffic flow prediction with vehicle trajectories},
+  author={Li, Mingqian and Tong, Panrong and Li, Mo and Jin, Zhongming and Huang, Jianqiang and Hua, Xian-Sheng},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={35},
+  number={1},
+  pages={294--302},
   year={2021}
 }
 
