--- a/BachelorThesis/config/preamble.tex
+++ b/BachelorThesis/config/preamble.tex
@@ -6,6 +6,7 @@
   \newcommand{\dd}{\mathrm{d}}
   \newcommand{\RR}{\mathbb{R}}
   \newtheorem{definition}{Definition}
+  \newtheorem{problem}{Problem}
 % 参考文献
 \usepackage[sorting=none, style=gb7714-2015, backend=bibtex]{biblatex}
   \addbibresource{ref.bib}
