--- a/BachelorThesis/sections/dz/intro.tex
+++ b/BachelorThesis/sections/dz/intro.tex
@@ -23,7 +23,7 @@ To summarize, in this paper, we propose a procedure to learn trajectory-based ro
 
 The contribution of our paper is:
 \begin{itemize}
-    \item We build a road-network-based trajectory dataset via completely raw GPS data.
+    \item We build a road-network-based trajectory dataset upon completely raw GPS data.
     \item We proposed a procedure to learn road correlation through trajectories.
     \item We refine traffic state prediction by utilizing the trajectory-based road correlation.
 \end{itemize}
