--- a/BachelorThesis/main.tex
+++ b/BachelorThesis/main.tex
@@ -33,23 +33,23 @@
 
 % \前序格式化
 % \摘要标题
-% \input{sections/dz/abstract.tex} % 论文摘要
+% \input{sections/abstract.tex} % 论文摘要
 
 \目录\clearpage % 目录及换页
 
 \正文格式化
-\input{sections/dz/intro}
-\input{sections/dz/related_work}
-\input{sections/dz/preliminaries}
-\input{sections/dz/dataset}
-\input{sections/dz/methodology}
-\input{sections/dz/experiments}
-\input{sections/dz/conclusion}\clearpage
+\input{sections/intro}
+\input{sections/related_work}
+\input{sections/preliminaries}
+\input{sections/dataset}
+\input{sections/methodology}
+\input{sections/experiments}
+\input{sections/conclusion}\clearpage
 
 \参考文献
   \printbibliography[heading=none]\clearpage
 % \附录
 %   \input{sections/examples/appendix.tex}\clearpage
 \致谢
-  \input{sections/dz/thanks.tex}
+  \input{sections/thanks.tex}
 \end{document}
