--- a/BachelorThesis/ref.bib
+++ b/BachelorThesis/ref.bib
@@ -235,3 +235,13 @@
   volume={27},
   year={2014}
 }
+
+@article{data_cleaning,
+  title={A review on coarse warranty data and analysis},
+  author={Wu, Shaomin},
+  journal={Reliability Engineering \& System Safety},
+  volume={114},
+  pages={1--11},
+  year={2013},
+  publisher={Elsevier}
+}
