--- a/BachelorThesis/sections/intro.tex
+++ b/BachelorThesis/sections/intro.tex
@@ -6,7 +6,7 @@ Modern transportation systems contain road vehicles, railway transportation and 
 
 Traffic prediction is typically based on consideration of historical traffic state data. In the development of intelligent transportation systems, traffic states are detected by traffic sensors, bus and metro transactions logs, traffic surveillance cameras and GPS devices. However, traffic state data is hard to manage because it involves large data volumes with high dimensionality. Its typical characteristic is that it contains both spatial and temporal domains.
 % The traffic state in a specific location has both spatial dependency, which may not be affected only by nearby areas, and temporal dependency, which may be periodic.
-Therefore, traffic prediction becomes a challenging topic because of spatial and temporal dependencies
+Therefore, traffic prediction becomes a challenging topic because of spatial and temporal dependencies.
 \begin{enumerate}
     \item \textbf{Spatial dependency.} Urban road network has a topological structure that seriously affects the change of traffic state of each road. To be specific, the upstream traffic state influences the downstream roads for the reason like vehicle transfer.
     
