--- a/BachelorThesis/sections/related_work.tex
+++ b/BachelorThesis/sections/related_work.tex
@@ -10,4 +10,4 @@ For grid-based datasets, there are \textit{TaxiBJ}\cite{taxibj} that consists of
 
 \vspace{\baselineskip}
 
-\textbf{Traffic Prediction Models}. Early attempts use traditional time series forecasting model including ARIMA\cite{ARIMA_pred} and VAR\cite{var_pred}, as well as machine learning techniques like k-NN\cite{knn_pred} and SVM\cite{svm_pred}. As mentioned in section 1, these models cannot capture the spatiotemporal dependency well. Many state-of-the-art deep neural networks have been proposed in the last several years. Yu et al.\cite{STGCN} proposed two different convolution blocks to capture spatial and temporal dependencies separately. Li et al.\cite{DCRNN} take advantage of seq2seq\cite{seq2seq} architecture and perform diffusion convolution on the graph. From our observation, few existing work leverage trajectories in traffic prediction. Hui et al.\cite{trajnet} extract the temporal features of roads by convolution with recent, daily-periodic and weekly-periodic traffic state data. Then they perform feature smoothing by propagating features through trajectories. On the contrary, our work attempts to combine the spatial representation that learned from trajectories into traffic state prediction models.
+\textbf{Traffic Prediction Models.} Early attempts use traditional time series forecasting model including ARIMA\cite{ARIMA_pred} and VAR\cite{var_pred}, as well as machine learning techniques like k-NN\cite{knn_pred} and SVM\cite{svm_pred}. As mentioned in section 1, these models cannot capture the spatiotemporal dependency well. Many state-of-the-art deep neural networks have been proposed in the last several years. Yu et al.\cite{STGCN} proposed two different convolution blocks to capture spatial and temporal dependencies separately. Li et al.\cite{DCRNN} take advantage of seq2seq\cite{seq2seq} architecture and perform diffusion convolution on the graph. From our observation, few existing work leverage trajectories in traffic prediction. Hui et al.\cite{trajnet} extract the temporal features of roads by convolution with recent, daily-periodic and weekly-periodic traffic state data. Then they perform feature smoothing by propagating features through trajectories. On the contrary, our work attempts to combine the spatial representation that learned from trajectories into traffic state prediction models.
