--- a/model/road_embed.ipynb
+++ b/model/road_embed.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cseadmin/dz/anaconda3/envs/torch1.11/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'/home/cseadmin/dz/TrafficFlowModel/model'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2567,6 +2575,39 @@
     "for i in range(len(result)):\n",
     "    if result[i]:\n",
     "        print('Row: ', i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1076886"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trainset:\tx-torch.Size([10228578, 5])\ty-torch.Size([10228578])\n",
+      "Valset:  \tx-torch.Size([1455100, 5])  \ty-torch.Size([1455100])\n",
+      "Testset:\tx-torch.Size([2931077, 5])\ty-torch.Size([2931077])\n"
+     ]
+    }
+   ],
+   "source": [
+    "p=0.8\n",
+    "traj_list_all=np.load(f\"../data/sz_taxi_202006/sz_taxi_202006_traj_list_bin_24_sampled_{p}_flatten_id.npy\", allow_pickle=True)\n",
+    "\n",
+    "len(traj_list_all)\n",
+    "train_loader, val_loader, test_loader=get_dataloaders(traj_list_all, SEQ_LEN, batch_size=256)"
    ]
   }
  ],
