--- a/data_process/gis_pipeline/fmm2atom_gis.ipynb
+++ b/data_process/gis_pipeline/fmm2atom_gis.ipynb
@@ -3582,10 +3582,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "6c06479978a9afb049dacef30f4b37fb04e7a2dfd65fe1755a86e45fec2f65ba"
+   "hash": "a8de3ed3a1560fc9f13af5266ca08823e90fcdd17bfae2dfaf8ec66fe041076c"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:dz] *",
+   "display_name": "Python 3.8.5 ('dz')",
    "language": "python",
    "name": "python3"
   },
