--- a/data_process/gis_pipeline/drop_data.ipynb
+++ b/data_process/gis_pipeline/drop_data.ipynb
@@ -2613,10 +2613,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "a8de3ed3a1560fc9f13af5266ca08823e90fcdd17bfae2dfaf8ec66fe041076c"
+   "hash": "6c06479978a9afb049dacef30f4b37fb04e7a2dfd65fe1755a86e45fec2f65ba"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('dz')",
+   "display_name": "Python 3.7.11 ('torch1.7')",
    "language": "python",
    "name": "python3"
   },
@@ -2630,7 +2630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
